# tl-test

./: CMakeLists.txt  README.md  compile.sh
src/: Graph.hpp  binary_tree_calculator.cpp  binary_tree_calculator.hpp  hotel.cpp  hotel.hpp  question1.cpp  question2.cpp  room_assigner.cpp  room_assigner.hpp
src/question1/: Graph.hpp  README.md  graph.hpp  hotel.cpp  hotel.hpp  hotel_test.cpp  question1.cpp
src/question2/: README.md  binary_tree_calculator.cpp  binary_tree_calculator.hpp  binary_tree_calculator_test.cpp  question2.cpp
